--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     
                <div class="col-12 col-md-4" id="div1">
                  <div class="card">
-                           <img class="card-img-top" src="assets/img/Image1.jpg" alt="Card image cap">
+                           <img class="card-img-top" src="assets/img/Image1.JPG" alt="Card image cap">
                              <div class="card-body">
                               <h5 class="card-title">Recinto, Chillán</h5>
                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
