--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Sebastian Farias">
+    <meta name="description" content="Viajes, Work Out>">
+    <meta name="keywords" content="Viajes, Work, Programador, Vida, Chile">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
 <!-- font awesome-->
@@ -35,7 +38,7 @@
                      <li class="nav-item"><a class="nav-link text-light" href="#Inicio">Inicio</a></li>
                      <li class="nav-item"><a class="nav-link text-light" href="#Experiencias">Experiencia</a></li>
                      <li class="nav-item"><a class="nav-link text-light" href="#Viajes">Viajes</a></li>
-                     <li class="nav-item"><a class="nav-link text-light" href="#Circulo">Circulo</a></li>
+                     <li class="nav-item"><a class="nav-link text-light" href="#Circulo">Círculo</a></li>
                      <li class="nav-item"><a class="nav-link text-light" href="#Contacto">Contacto</a></li>
                   </ul> 
        
@@ -128,7 +131,7 @@
                                   <img class="card-img-top" src="assets/img/suricata.png" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Suricata</h5>
-                                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                                   </div>
                                   <div class="card-footer">
                                     <span data-placement="top"data-content="Viaje al segundo desafio" data-toggle="popover"data-trigger="hover"> 
@@ -148,7 +151,7 @@
                                             </div>
                                             <div class="modal-body">
                                                 <img class="card-img-top"  src="assets/img/dudas.jpg" alt="Card image cap">
-                                                <p class="modalTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam eaque voluptatibus voluptate in officiis, accusantium neque quibusdam laudantium minima nemo velit explicabo aut placeat itaque cumque recusandae aspernatur unde. Ut!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda ad rem repudiandae ex dolor. Quod aspernatur exercitationem, quo, voluptate dicta soluta, ea quidem natus facilis obcaecati nostrum sint consequatur!</p>
+                                                <p class="modalTop">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                                              
                                             </div>
                                             <div class="modal-footer">
@@ -501,7 +504,7 @@
                     <footer id="Final" class="finfooter container-fluid">
                         <h2 class="text-light">SEBASTIÁN</h2>
 
-                        <a href="https://github.com/sebafariass"><i class="fab fa-github-square fa-2x"></i></a>
+                        <a href="https://github.com/sebafariass "><i class="fab fa-github-square fa-2x"></i></a>
                         <a href="https://twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
                         <a href="https://www.instagram.com/sebafariass/?hl=en"><i class="fab fa-instagram fa-2x"></i></a>
 
